[package]
name = "bmw"
version = "0.2.1"
edition = "2021"
description = "Battery Manager for Wearable device for Rust."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
mio = "0.8.1"
udev = { version = "0.6.3", features = ["mio08"] }
