[package]
name = "bmw-derive"
version = "0.1.0"
edition = "2021"
description = "A derive proc-macro libray"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.37"
quote = "1.0.18"
syn = "1.0.91"
